# kapptemplate

./: .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  ChangeLog  HOWTO_MakeNewtemplate.md  HOWTO_MakeNewtemplate.txt  Makefile.am  Makefile.cvs  Messages.sh  README  README.md  TODO  apptemplateitem.cpp  apptemplateitem.h  apptemplatesmodel.cpp  apptemplatesmodel.h  choice.ui  choicepage.cpp  choicepage.h  configure.in  dcopclient.py  existing.module  generate.ui  generatepage.cpp  generatepage.h  index.html  install-me  introduction.ui  kapp4template.module  kapptemplate  kapptemplate.common  kapptemplate.cpp  kapptemplate.desktop  kapptemplate.h  kapptemplate.in  kapptemplate.kcfg  kapptemplate.lsm  kapptemplate.module  knewclass.module  knewfunction.module  (+6 more)
admin/: Makefile.am  Makefile.common  acinclude.m4.in  am_edit  configure.in.min  debianrules
appframework/: CMakeLists.txt  COPYING  INSTALL  Makefile.am  Makefile.cvs  README  app.lsm  app.spec  base-Makefile.am  config.h.bot  configure.in.in.in  po-Makefile.am
appframework/no-exe/: Makefile.am
common/: Makefile.am  (+4 more)
kapp/: CMakeLists.txt  Makefile.am  app-CMakeLists.txt  app-Makefile.am  app-configure.in.in  app-desktop  app.cpp  app.desktop  app.h  app_client.cpp  apppref.cpp  apppref.h  appui.rc  appview.cpp  appview.h  doc-CMakeLists.txt  doc-Makefile.am  doc-app-CMakeLists.txt  doc-app-Makefile.am  doc-en-Makefile.am  icons-CMakeLists.txt  index.docbook  main.cpp  org.kde.app.xml  pics-CMakeLists.txt  pics-Makefile.am  settings.kcfgc  src-CMakeLists.txt
kapp/no-exe/: CMakeLists.txt  Makefile.am
kpartapp/: CMakeLists.txt  Makefile.am  app-CMakeLists.txt  app-Makefile.am  app-desktop  app-main-CMakeLists.txt  app.cpp  app.desktop  app.h  app_part.cpp  app_part.desktop  app_part.h  app_part.rc  app_shell.rc  doc-CMakeLists.txt  doc-Makefile.am  doc-app-CMakeLists.txt  index.docbook  main.cpp
kpartapp/no-exe/: CMakeLists.txt  Makefile.am
src/application/: CMakeLists.txt  ChoicePage.qml  ConfigurePage.qml  GeneratorPage.qml  IntroductionPage.qml  Main.qml  apptemplateitem.cpp  apptemplateitem.h  apptemplatesmodel.cpp  apptemplatesmodel.h  choice.ui  choicepage.cpp  choicepage.h  generatepage.cpp  generatepage.h  generator.cpp  generator.h  kapptemplate.appdata.xml  kapptemplate.cpp  kapptemplate.desktop  kapptemplate.h  kapptemplate.kcfg  kapptemplate.knsrc  konqi-app-dev.png.license  logging.h  main.cpp  org.kde.kapptemplate.appdata.xml  org.kde.kapptemplate.desktop  previewimageprovider.cpp  previewimageprovider.h  properties.ui
src/templates/: CMakeLists.txt
src/templates/C++/: CMakeLists.txt
src/templates/C++/akonadiresource/: %{APPNAMELC}resource.cpp  %{APPNAMELC}resource.h  CMakeLists.txt  README  akonadiresource.kdevtemplate
src/templates/C++/akonadiserializer/: CMakeLists.txt  README  akonadi_serializer_%{APPNAMELC}.cpp  akonadi_serializer_%{APPNAMELC}.desktop  akonadi_serializer_%{APPNAMELC}.h  akonadiserializer.kdevtemplate
src/templates/C++/cmake_qt5guiapp/: CMakeLists.txt  cmake_qt5guiapp.kdevtemplate
src/templates/C++/flake/: %{APPNAME}Plugin.cpp  %{APPNAME}shape.desktop  flake.kdevtemplate
src/templates/C++/kapp4/: kapp4.kdevtemplate
src/templates/C++/kapp4-qml/: kapp4-qml.kdevtemplate
src/templates/C++/kde-frameworks5/: CMakeLists.txt  kde-frameworks5.kdevtemplate
src/templates/C++/kde-frameworks5-simple/: CMakeLists.txt  kde-frameworks5-simple.kdevtemplate
src/templates/C++/kde-frameworks6/: CMakeLists.txt  kde-frameworks6.kdevtemplate
src/templates/C++/kde-frameworks6-simple/: CMakeLists.txt  kde-frameworks6-simple.kdevtemplate
src/templates/C++/kde-simple/: kde-simple.kdevtemplate
src/templates/C++/kofficetext/: kofficetext.kdevtemplate  kotext%{APPNAMELC}.desktop
src/templates/C++/konqplugin/: konqplugin.kdevtemplate
src/templates/C++/kpartapp/: CMakeLists.txt  README  kpartapp.kdevtemplate
src/templates/C++/ktexteditor/: %{APPNAMELC}.cpp  %{APPNAMELC}.h  %{APPNAMELC}.json  CMakeLists.txt  README  ktexteditor.kdevtemplate  ktexteditor_%{APPNAMELC}.desktop
src/templates/C++/plasmoid/: README  plasma-applet-%{APPNAMELC}.desktop  plasmoid.kdevtemplate
src/templates/C++/qmake_qt4guiapp/: qmake_qt4guiapp.kdevtemplate
src/templates/C++/runner/: %{APPNAMELC}.cpp  %{APPNAMELC}.desktop  %{APPNAMELC}.h  CMakeLists.txt  README  runner.kdevtemplate
src/templates/Python/pykde4app/: pykde4app.kdevtemplate
src/templates/Python/pyqt4app/: pyqt4app.kdevtemplate
src/templates/QML/: CMakeLists.txt
src/templates/QML/qml-plasmoid/: qml-plasmoid.kdevtemplate
src/templates/QML/qt5-qml2/: qt5-qml2.kdevtemplate
src/templates/ruby/kderubyapp/: kderubyapp.kdevtemplate
src/templates/ruby/rubykonqplugin/: rubykonqplugin.kdevtemplate
templates/C++/kapp/: CMakeLists.txt  app.h  app.kcfg  app_client.cpp  apppref.cpp  apppref.h  appui.rc  appview.cpp  appview.h  doc-CMakeLists.txt  index.docbook  main.cpp  org.kde.app.App.xml  src-CMakeLists.txt
templates/C++/kapp4/: %{APPNAMELC}.desktop  %{APPNAMELC}.h  %{APPNAMELC}view.cpp  %{APPNAMELC}view_base.ui  CMakeLists.txt  Messages.sh  README  description.txt  kapp4-CMakeLists.txt  kapp4.cpp  kapp4.h  kapp4.kdevtemplate  kapp4view.cpp  kapp4view.h  main.cpp
templates/C++/kapp4/doc/: index.docbook
templates/C++/kapp4/src/: %{APPNAMELC}.cpp  %{APPNAMELC}.desktop  %{APPNAMELC}.h  %{APPNAMELC}view.cpp  %{APPNAMELC}view.h  %{APPNAMELC}view_base.ui  CMakeLists.txt  Messages.sh  main.cpp  prefs_base.ui
templates/QML/qml-plasmoid/: CMakeLists.txt  README  qml-plasmoid.kdevtemplate
templates/ruby/kderubyapp/: %{APPNAMELC}.desktop  %{APPNAMELC}.rb  %{APPNAMELC}view.rb  %{APPNAMELC}view_base.ui  CMakeLists.txt  Makefile  README  kderubyapp.kdevtemplate  main.rb
variable/: Makefile.am  app-Makefile.am  app-configure.in.in  app.cpp  app.desktop  app.h  app.kdelnk  app.lsm  app.nif  app.sgml  app.spec  app.xpm  app_client.cpp  appiface.h  apppref.cpp  appui.rc  appview.cpp  appview.h  appwidget.cpp  appwidget.h  configure.in  doc-Makefile.am  doc-en-Makefile.am  index.docbook  main.cpp  mini-app.xpm  pics-Makefile.am  po-Makefile.am
(+298 files in other folders)
