add_subdirectory( no-exe) 

install(FILES app_client.cpp appview.h index.docbook app-Makefile.am doc-Makefile.am lo16-app-app.png app-configure.in.in apppref.cpp doc-app-Makefile.am lo32-app-app.png app.cpp apppref.h hi16-app-app.png main.cpp app-desktop appui.rc hi32-app-app.png app.h appview.cpp hi48-app-app.png pics-Makefile.am DESTINATION ${DATA_INSTALL_DIR}/kapptemplate/kapp)
