add_subdirectory( no-exe) 

install(FILES app_client.cpp appview.h index.docbook app-CMakeLists.txt doc-CMakeLists.txt lo16-app-app.png apppref.cpp doc-app-CMakeLists.txt lo32-app-app.png app.cpp apppref.h hi16-app-app.png main.cpp app-desktop appui.rc hi32-app-app.png app.h appview.cpp hi48-app-app.png pics-CMakeLists.txt DESTINATION ${DATA_INSTALL_DIR}/kapptemplate/kapp)
