add_subdirectory( no-exe) 

install(FILES app_part.cpp app-CMakeLists.txt app-main-CMakeLists.txt app_part-desktop hi16-app-app.png main.cpp app_part.h hi32-app-app.png app.cpp app_part.rc hi48-app-app.png app-desktop app_shell.rc index.docbook app.h doc-CMakeLists.txt DESTINATION ${DATA_INSTALL_DIR}/kapptemplate/kpartapp)

