SUBDIRS=no-exe

kpartappdir = $(kde_datadir)/kapptemplate/kpartapp
kpartapp_DATA = app_part.cpp doc-app-Makefile.am \
	lo32-app-app.png \
	app-Makefile.am app_part-desktop hi16-app-app.png main.cpp \
	app-configure.in.in app_part.h hi32-app-app.png \
	app.cpp app_part.rc hi48-app-app.png \
	app-desktop app_shell.rc index.docbook \
	app.h doc-Makefile.am lo16-app-app.png
