echo "Creating $LOCATION_ROOT/configure.in...";
cat << EOF > $LOCATION_ROOT/configure.in
dnl without this order in this file, autoconf will not work!
dnl the argument is a source file out of your sources. But
dnl acinclude.m4 makes the job for all programs ;-)
AC_INIT(acinclude.m4)

dnl without this order in this file, automake will be confused!
dnl the argument 
AM_CONFIG_HEADER(config.h)

dnl init some variables needed by automake's Makefiles.

dnl sets the prefix to \$KDEDIR or /opt/kde (if no \$KDEDIR
dnl set) for the case, that there is no --prefix
AC_PREFIX_DEFAULT(\${KDEDIR:-/opt/kde})

dnl the first KDE macro to check for the Compilers needed. The
dnl default autoconf macro had not the best support for C++ compilers.
AC_CHECK_COMPILERS

dnl don't build libraries. This mainly disables the configure switches
dnl --enable-shared and --enable-static, since they don't make that much
dnl sense then :)
AM_DISABLE_LIBRARIES

dnl let libtool configure. Checks for the way to handle your compiler
dnl to do some magic 
KDE_PROG_LIBTOOL

dnl adds --disable-nls to not install the .gmo files out of po. If you
dnl don't have i18n support, you may want to remove this, but leaving it
dnl here doesn't hurt
AM_KDE_WITH_NLS

dnl definitely the biggest macro. Checks for X, qt, moc, KDE and the
dnl correct paths to install to. This macro adds about 1700 lines to
dnl your configure, so be aware not to remove it!
AC_PATH_KDE    

dnl construct aliases for KDE libs that have the proper dependancies
KDE_CREATE_LIBS_ALIASES

dnl in this space add everything you want to check for;
dnl examples are specific headers, libraries, etc.
dnl everything to compile and run a KDE program is already checked

dnl add here the package name and its version number. It will
dnl be defined in config.h and in the Makefiles
AM_INIT_AUTOMAKE($APP_NAME_LC, $APP_VERSION)

dnl add all your Makefiles here. These are created by configure
AC_OUTPUT(Makefile \\
         $APP_NAME_LC/Makefile \\
         $APP_NAME_LC/doc/Makefile \\
         $APP_NAME_LC/doc/en/Makefile \\
         $APP_NAME_LC/pics/Makefile \\
         po/Makefile)
